force-app/main/default/objects/Letter_of_intent__c/Letter_of_intent__c.object-meta.xml
<CustomObject>
    <label>Letter of intent</label>
    <nameField>
        <displayFormat>LOI-{0}</displayFormat>
        <label>Letter of intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Letter of intents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>