force-app/main/default/objects/Letter_of_intent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Letter of intents</relationshipLabel>
    <relationshipName>Letter_of_intents</relationshipName>
    <type>Lookup</type>
</CustomField>