force-app/main/default/objects/Letter_of_intent__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>Funding_Award__c</referenceTo>
    <relationshipLabel>Letter of intents</relationshipLabel>
    <relationshipName>Letter_of_intents</relationshipName>
    <type>Lookup</type>
</CustomField>