force-app/main/default/objects/Letter_of_intent__c/fields/PoliticalSubdivisionEmail__c.field-meta.xml
<CustomField>
    <fullName>PoliticalSubdivisionEmail__c</fullName>
    <label>Political Subdivision Email</label>
    <type>Email</type>
</CustomField>