force-app/main/default/objects/Letter_of_intent__c/fields/ProgramManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>ProgramManagerEmail__c</fullName>
    <label>Program Manager Email</label>
    <type>Email</type>
</CustomField>