force-app/main/default/objects/Letter_of_intent__c/fields/StrategyJ__c.field-meta.xml
<CustomField>
    <fullName>StrategyJ__c</fullName>
    <label>Strategy J</label>
    <type>TextArea</type>
</CustomField>