force-app/main/default/objects/Letter_of_intent__c/validationRules/Greater_than_25k.validationRule-meta.xml
<ValidationRule>
    <fullName>Greater_than_25k</fullName>
    <active>true</active>
    <errorConditionFormula>BudgetAmount__c &lt;= 25</errorConditionFormula>
    <errorDisplayField>BudgetAmount__c</errorDisplayField>
    <errorMessage>Budget amount should be more than $25k</errorMessage>
</ValidationRule>